tests/baselines/reference/inferenceFromIncompleteSource.errors.txt
inferenceFromIncompleteSource.ts(11,11): error TS2345: Argument of type '{ items: { name: string; }[]; itemKey: "name"; }' is not assignable to parameter of type 'ListProps<{ name: string; }, "name">'.
  Property 'prop' is missing in type '{ items: { name: string; }[]; itemKey: "name"; }' but required in type 'ListProps<{ name: string; }, "name">'.


==== inferenceFromIncompleteSource.ts (1 errors) ====
    // Repro from #42030
    
    interface ListProps<T, K extends keyof T> {
      items: T[];
      itemKey: K;
      prop: number;
    }
    
    declare const Component: <T, K extends keyof T>(x: ListProps<T, K>) => void;
    
    Component({items: [{name:' string'}], itemKey: 'name' });
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ items: { name: string; }[]; itemKey: "name"; }' is not assignable to parameter of type 'ListProps<{ name: string; }, "name">'.
!!! error TS2345:   Property 'prop' is missing in type '{ items: { name: string; }[]; itemKey: "name"; }' but required in type 'ListProps<{ name: string; }, "name">'.
!!! related TS2728 inferenceFromIncompleteSource.ts:6:3: 'prop' is declared here.
    